# ts-ifa

./: .gitignore  AGENTS.md  README.md  __init__.py  analyze_v9.ipynb  chronos_model.py  chronos_old.py  evaluate_baselines.py  experiment_univariate.py  extraction.py  features.py  foundation_models.py  load_dataset_model.py  models.py  neighbors.py  patchtst.py  patchtst_old.py  proposed_model.py  pyproject.toml  train_proposed_model.py  train_ts_ifa.py  ts_ifa.py
timetensor_old/: .gitignore  README.md  analyze_features.py  conso_script.py  covariates_past.py  eval_model.py  eval_users.py  eval_users_script.py  example_model.py  extract_neighbors.py  interpolation_all.py  load_dataset.py  neighbors_all.py  neighbors_distance.py  neighbors_windows.py  pyproject.toml  test_chronos.py  test_pfn.py  train_model.py  train_oracle.py  train_users.py
timetensor_old/configs/: config.yaml
timetensor_old/configs/data/: electricity.yaml
timetensor_old/configs/extra/: all.yaml
timetensor_old/configs/model/: DLinear.yaml  PatchTST.yaml
timetensor_old/configs/normalization/: cmIN.yaml  instance.yaml
timetensor_old/new_scripts/: test.err  test.out
timetensor_old/scripts/: full.slurm  load.slurm  results.slurm  test.slurm  tsne.py  tsne.slurm
timetensor_old/scripts_aaai/: extract.slurm
timetensor_old/scripts_fm/: augment.slurm  interpolation_all.slurm  neighbors.slurm  neighbors_all.slurm
timetensor_old/scripts_fm/old/: cross_learning_indiv.py  cross_learning_loss.py  (+2 more)
timetensor_old/scripts_grevin/: grevin.slurm  revin.slurm
timetensor_old/scripts_iclr/: conso.slurm  example.slurm  identity_test.py  run.sh  test_pfn.slurm
timetensor_old/scripts_time/: exotics.slurm  sampling.slurm
(+197 files in other folders)
