[project]
name = "ts-ifa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.4",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "torch==2.5.1",
]

[project.optional-dependencies]
sota = [
    "chronos-forecasting>=2.0.1",
    "tabpfn>=6.3.1",
]
