[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timetensor"
version = "0.1.0"
description = "Time Series Dataset module"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Gaspard Berthelier", email = "gberthelier.projet@gmail.com"},
]
dependencies = [
    "chronos-forecasting>=2.0.1",
    "datasets>=4.0.0",
    "faiss-cpu>=1.13.2",
    "hydra-core>=1.3.2",
    "ipywidgets>=8.1.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "tabpfn>=6.3.1",
    "tabulate>=0.9.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]
